# paper-glider

./: CMakeLists.txt  README.md  package.xml
demo_descartes/: descartes_example.cpp
example_moveit/: moveit_ompl_control.py  moveit_ompl_example_usage.py  test_motion.py
launch/: t1_cartesian_example.launch  t1_paperglider.launch
meshes/: glider-model.stl
scripts/: ex_ompl_control.py  paper-glider-tutorial.py  paper-glider-v1.py  paper-glider.py
